--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkouts@v1
+      - uses: actions/checkout@v1
       - uses: ./action-a
         with: 
           MY_NAME: "MONA"
