--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -1,4 +1,4 @@
-name: "Hello Action"
+name: "Hello Actions"
 description: "Greet someone"
 author: "octocat@github.com"
 
@@ -7,11 +7,11 @@ inputs:
     description: "Who to greet"
     required: true
     default: "World"
-    
-  runs:
-    using: "docker"
-    image: "Dockerfile"
-    
-  branding:
-    icon: "mic"
-    color: "purple"
+
+runs:
+  using: "docker"
+  image: "Dockerfile"
+
+branding:
+  icon: "mic"
+  color: "purple"
